lustre/utils/mkfs_lustre.c
@@ -227,12 +227,20 @@ static bool server_make_name(__u32 flags, __u16 index, const char *fs,
 	bool invalid_flag = false;
 
 	if (flags & (LDD_F_SV_TYPE_MDT | LDD_F_SV_TYPE_OST)) {
+		char reg_flag = '-';
+
+		if (flags & LDD_F_WRITECONF)
+			reg_flag = '=';
+		else if (flags & LDD_F_VIRGIN)
+			reg_flag = ':';
+		else if (flags & LDD_F_NO_LOCAL_LOGS)
+			reg_flag = '+';
+
+
 		if (!(flags & LDD_F_SV_ALL))
 			snprintf(name_buf, name_buf_size, "%.8s%c%s%04x", fs,
-				(flags & LDD_F_VIRGIN) ? ':' :
-				((flags & LDD_F_WRITECONF) ? '=' :
-				((flags & LDD_F_NO_LOCAL_LOGS) ? '+' : '-')),
-				(flags & LDD_F_SV_TYPE_MDT) ? "MDT" : "OST",
+				 reg_flag,
+				 (flags & LDD_F_SV_TYPE_MDT) ? "MDT" : "OST",
 				index);
 	} else if (flags & LDD_F_SV_TYPE_MGS) {
 		snprintf(name_buf, name_buf_size, "MGS");
